updates to readme